--- a/module-3/public/index.html
+++ b/module-3/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="/employees.js" defer></script>
+    <script src="/main.js" defer></script>
     <title>Our first react page</title>
     <style>
         table.bordered-table {
